--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <title>Meadowlark Travel</title>
 </head>
 <body>
+    <header><img src="img/pineapple.jpg" alt="Meadowlark Travel Logo"></header>
     {{{ body }}}
 </body>
 </html>
