--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,6 @@
 <h1>About Meadowlark Travel</h1>
 
+<a href="/contact">Go to contacts.</a>
+
 <p>Your fortune for the day:</p>
 <blockquote>{{fortune}}</blockquote>
