--- a/views/tours/request-group-rate.handlebars
+++ b/views/tours/request-group-rate.handlebars
@@ -1,6 +1,6 @@
 <h1>Request Group Rate</h1>
 <form>
-    <input type="hidden" name="referrer">
+    <input type="hidden" name="referrer" value="">
     Name: <input type="text" id="fieldName" name="name"><br>
     Group size: <input type="text" name="groupSize"><br>
     Email: <input type="email" name="email"><br>
@@ -13,3 +13,5 @@
         });
     </script>
 {{/section}}
+
+{{!-- {{{_sections.jquery}}} --}}
